--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ h11==0.16.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+pillow==12.0.0
 pymongo==4.15.3
 python-dotenv==1.1.1
 python-engineio==4.12.3
